[package]
name = "volezk"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-std = { version = "0.4.0", default-features = false, features = [
    "print-trace",
    "std",
] }
ark-ff = { version = "0.4.2", default-features = false }
ark-poly = { version = "0.4.2", default-features = false }
ark-ec = { version = "0.4.2", default-features = false }
ark-bls12-377 = { version = "0.4.0", default-features = false, features = [
    "curve",
] }
colored = "2.0.4"
rand = "0.8"
blake3 = "1.3"
rs_merkle = "1.3"
hex = "0.4"
ff = { version = "0.12", features = ["derive"] }
ff-derive-num = "0.2"
serde = { version = "1.0", features = ["derive"] }
num-traits = "0.2"
halo2curves = { git = "https://github.com/zhenfeizhang/halo2curves" }
p3-mersenne-31 = { git = "https://github.com/Plonky3/Plonky3" }
p3-field = { git = "https://github.com/Plonky3/Plonky3" }
once_cell = "1.19"